--- a/spillbibliotek/src/App.scss
+++ b/spillbibliotek/src/App.scss
@@ -62,4 +62,25 @@ body, html {
       display: flex;
     }
   }
+
+  button {
+    background-color: #008CBA; /* Blue */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  button:hover {
+    background-color: #4CAF50; /* Green */
+    color: white;
+  }
+  
   
