--- a/spillbibliotek/src/styling/GameShop.scss
+++ b/spillbibliotek/src/styling/GameShop.scss
@@ -1,22 +1,8 @@
+
 .game-shop {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  
-    .game {
-      margin: 20px;
-      max-width: 300px;
-      text-align: center;
-  
-      h3 {
-        font-size: 20px;
-        margin-bottom: 10px;
-      }
-  
-      img {
-        width: 100%;
-        height: auto;
-      }
-    }
-  }
-  
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  padding-bottom: 150px;
+}
