--- a/spillbibliotek/src/styling/App.scss
+++ b/spillbibliotek/src/styling/App.scss
@@ -11,6 +11,11 @@ body, html {
     height: 100%;
   }
   
+  .main-content {
+    min-height: calc(100vh - 60px);
+  }
+  
+
   .navbar {
     display: flex;
     justify-content: space-between; 
@@ -84,21 +89,22 @@ body, html {
   }
 
   footer {
-    background-color: #282c34; /* Dark grey background */
-    color: white; /* White text */
-    text-align: center; /* Center the text */
-    padding: 20px 0; /* 20px padding at the top and bottom */
-    position: fixed; /* Footer will stick to the bottom */
-    left: 0; /* Align left */
-    bottom: 0; /* Stick to bottom */
-    width: 100%; /* Full width */
+    position: relative;
+    background-color: #282c34; 
+    color: white; 
+    text-align: center; 
+    padding: 5px 0; 
+    left: 0; 
+    bottom: 0; 
+    width: 100%; 
+   
   
     a {
-      color: #61dafb; /* Light blue links */
-      text-decoration: none; /* Remove underline */
+      color: #61dafb; 
+      text-decoration: none; 
   
       &:hover {
-        color: white; /* White link on hover */
+        color: white; 
       }
     }
   }
