--- a/spillbibliotek/src/styling/Dashboard.scss
+++ b/spillbibliotek/src/styling/Dashboard.scss
@@ -6,6 +6,21 @@
   
   .game-card {
     flex-basis: calc(50% - 10px);
-    margin-bottom: 20px;
+    margin-bottom: 20px; 
   }
+  
+  .game-card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+  }
+  
+  .section {
+    // ... existing styles ...
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+ 
   
